# hexago

./: .gitattributes  .gitignore  CMakeLists.txt  Hexago_Icon_Master.icns  Info.plist  Makefile  README.md  demo.cpp  hexagon.cpp  mac_osx.hh  mac_osx.mm  mac_osx_bundle_info.plist  make_mac_bundle.sh  types.hpp  windows_nt.cpp
.github/workflows/: build-release.yml  continuous-integration.yml
ConfigureSheet.nib/: classes.nib  designable.nib  keyedobjects.nib
cmake/Modules/: FindCOLRCV.cmake  FindSFML.cmake
hexago/: CMakeLists.txt  HexagoScreenSaver.cpp  HexagoScreenSaver.hpp  HexagoScreenSaverConfig.cpp  HexagoScreenSaverConfig.hpp  Hexagon.cpp  Hexagon.hpp  HexagonFactory.cpp  HexagonFactory.hpp  HexagonFactoryConfig.cpp  argument_parser.cpp  hexago.cpp  hexago.hpp
hexago-mac/: CMakeLists.txt  mac_osx.hh  mac_osx.mm  mac_osx_bundle_info.plist
hexago-win/: CMakeLists.txt  testdialog.rc  windows_nt.cpp
hexago/include/hexago/: HexagonFactory.hpp  HexagonFactoryConfig.hpp  hexago.hpp
hexago/src/: CMakeLists.txt  HexagoScreenSaver.cpp  HexagoScreenSaverConfig.cpp  Hexagon.cpp  HexagonFactory.cpp  HexagonFactoryConfig.cpp  argument_parser.cpp  hexago.cpp
src/: ArgumentParser.cpp  HexagoScreenSaver.cpp  HexagoScreenSaver.hpp  HexagoScreenSaverConfig.cpp  HexagoScreenSaverConfig.hpp  Hexagon.cpp  Hexagon.hpp  HexagonFactory.cpp  HexagonFactory.hpp  HexagonFactoryConfig.cpp  HexagonFactoryConfig.hpp  ParameterRange.cpp  ParameterRange.hpp  ParameterRange.inl  argument_parser.cpp  argument_parser.hpp  colour.cpp  colour.hpp  hexago.cpp  hexago.hpp  hexagon.cpp  hexagon.hpp  main.cpp  main.hpp  types.cpp  types.hpp
